<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Storage Info</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="first_time_message">Attention: This application do not add support for USB-OTG to your device!\nThe application was made for Sony Xperia V (LT25i) with Android 4.0.4 only, I cannot guarantee that will work on your device due to Android and hardware differences.\nThank you for your consideration!</string>

    <!-- Notifications -->
    <string name="notification_title">Storage Info</string>
    <string name="notification_title_path">%s</string>
    <string name="notification_message">Touch to see Storage Settings</string>

    <!-- Settings -->
    <string name="show_storage_info">Show Storage Settings</string>
    <string name="show_storage_info_desc">Go to the Storage Settings</string>
    <string name="settings_title">Storage Info</string>
    <string name="settings_summary">Storage Info settings</string>

    <string name="general_settings">Settings</string>

    <string name="enable_notifications">Enable notifications</string>
    <string name="enable_notifications_desc">Enable notification when an USB storage is pluged.</string>

    <string name="allow_notification_dismiss_title">Allow to dismiss notification</string>
    <string name="allow_notification_dismiss_desc">Check this option to allow the notifications do be dismissed from the notification bar.</string>

    <string name="notification_type">Notification type</string>
    <string name="notification_type_desc">Chose what shortcut should be created on the notification bar when an USB storage is pluged.</string>

    <string-array name="notification_type_array">
        <item>Create a notification shortcut to default Storage Settings application when an USB storage is pluged.</item>
        <item>Create a quick unmount/mount shortcut for available storage devices. (Check first choice if you encounter with errors)</item>
    </string-array>
    <string-array name="notification_type_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string name="hide_unmount_confirmation_title">Do not show the confirmation dialog for quick mount/unmount cases.</string>
    <string name="hide_unmount_confirmation_desc">This option is available only when the notification type is set to second option which should allow the quick mount or unmount actions to be made directly from the applications.</string>

    <string name="check_primary_volume_title">Primary storage volume check</string>
    <string name="check_primary_volume_desc">Check this to allow to mount or unmount primary storage volumes too.</string>

    <string name="check_emulated_volume_title">Emulated storage volume check</string>
    <string name="check_emulated_volume_desc">Check this to allow to mount or unmount emulated storage volumes too.</string>

    <string name="disabled_paths">Disabled paths</string>
    <string name="disabled_paths_desc">Choose what paths should not be (un)mount.</string>
    <string name="disabled_paths_desc_paths">Do not (un)mount: %s</string>
    <string name="other">Other</string>
    <string name="file_manager">Select a file manager</string>
    <string name="file_manager_desc">Select a file manager to be launched when a storage is mounted.</string>
    <string name="file_manager_selected">Selected file manager: %s</string>
    <string name="toggle_notification">Toggle notification</string>
    <string name="toggle_notification_desc">This option is actually a workaround which can be used to correct the notification bar messages, also check for primary and emulated volumes options.</string>
    <string name="debug_message">Storage Info: %s</string>
    <string name="icon_nothing">[]</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="scan_for_applications">Scan for applications&#8230;</string>
    <string name="no_application">No application available!</string>
    <string name="no_activity_exception">Seems you have a customized Android version:\n%s</string>

    <string name="send_debug_title">Send debugging logs</string>
    <string name="send_debug_desc">Send an e-mail with debugging files</string>
    <string name="send_debug_confirmation">Do you want to send a debugging report?\nYour default e-mail application will send an e-mail with two files attached, please fill a short description of your issues.\nThank you!</string>
    <string name="send_debug_email_title">Debugging logs for Storage Info</string>
    <string name="report_body">Before send this message check:\n1. you read it the application description;\n2. the message should have an archive attached;\n3. write a description in English with your issue bellow.\nOtherwise I will not be able to answer you!</string>
    <string name="send_report">Send report&#8230;</string>

    <string-array name="empty_array" />

    <!-- Storage activity dialog -->
    <string name="quick_notification_mount">Touch to mount:</string>
    <string name="quick_notification_unmount">Touch to unmount:</string>
    <string name="invalid_mount_title">Invalid mount state</string>
    <string name="invalid_mount_text">Your device have an invalid state, path: \"%s\".\nPlease remove it and plug it again, if error persist, please use the application as a shortcut to default Storage from Settings and send a report to: ciubex@yahoo.com with a short description. Thank you!</string>
    <string name="confirm_mount_title">Mount storage</string>
    <string name="confirm_mount_text">Mount the storage on the path: \"%s\".</string>
    <string name="confirm_unmount_title">Unmount storage.</string>
    <string name="confirm_unmount_text">Path: \"%s\"\nIf you unmount the USB storage, some applications that you are using will stop and may be unavailable until you remount the storage.</string>
    <string name="error_unmount_title">Unmounting storage failed</string>
    <string name="error_unmount_text_no_error">Cannot unmount USB storage with the path: \"%s\".\nTry again later.\nIf the error persist please change the notification type to use Storage Settings to unmount storages.</string>
    <string name="error_unmount_text">Cannot unmount storage with the path: \"%1$s\".\nTry again later.\nIf the error persist please change the notification type to use Storage Settings to unmount storages.\nThe error:\n%2$s.\nThe cause:\n%3$s.</string>
    <string name="error_unmount_text_SecurityException">Due to security restrictions cannot unmount storage with the path: \"%s\".\nPlease change the notification type to use Storage Settings to unmount storages.</string>
    <string name="error_mount_title">Mounting storage failed</string>
    <string name="error_mount_detach_text">Cannot mount storage with the path: \"%s\".\nTry to detach and attach again your device.</string>
    <string name="error_mount_text">Cannot mount storage with the path: \"%1$s\". Try again later.\nIf the error persist please change the notification type to use Storage Settings to mount storages.\nThe error:\n%2$s.\nThe cause:\n%3$s.</string>
    <string name="error_mount_text_SecurityException">Due to security restrictions cannot mount storage with the path: \"%s\".\nPlease change the notification type to use Storage Settings to mount storages.</string>
    <string name="error_storage_settings_title">Storage Settings Not Found</string>
    <string name="error_storage_settings_text">The Android version from this device do not provide an access to default Storage Settings activity: \"%s\".\nThis is not a normal exception and is related only with the Android version from this device. Most probably is a custom ROM or the developers do not respect Google requirements: http://developer.android.com/reference/android/provider/Settings.html#ACTION_INTERNAL_STORAGE_SETTINGS</string>

    <!-- License -->
    <string name="license">License</string>
    <string name="show_license">Show License</string>
    <string name="show_license_desc">GNU General Public License</string>

    <!-- Donation -->
    <string name="donate_btn_title">Donate</string>
    <string name="donate_btn_message">Only if you want to appreciate my work.</string>
    <string name="donate_title">Donation confirmation</string>
    <string name="donate_confirmation">If you appreciate this application, please do a donation buying Storage Info PRO!\nPressing YES button, you will be sent to Storage Info PRO from Google Play Store.\nThank you for using this application!</string>
    <string name="donate_url"><Data><![CDATA[https://play.google.com/store/apps/details?id=ro.ciubex.storageinfopro]]></Data></string>
    <string name="thank_you_title">Thank you for donation!</string>
    <string name="thank_you_desc">Thank you for the appreciation of my work, buying pro application.</string>

    <!-- About -->
    <string name="about_storage_info">About Storage Info</string>
    <string name="about">About</string>
    <string name="about_desc">About this application</string>
    <string name="about_text"><Data>
<![CDATA[
        Because my phone have support for USB-OTG (<a href="http://en.wikipedia.org/wiki/USB_On-The-Go">USB On-The-Go</a>), but do not have a quick way to unmount an attached USB device, I made this application.<br/>
        This is an open source application. The sources are available here: <a href="https://code.google.com/p/storage-info/">https://code.google.com/p/storage-info/</a><br/><br/>
        This application will create a shortcut to access the Storage Settings from the Notification bar when an USB mass storage is connected to an Android device which support USB-OTG.<br/>
		Normaly the Storage Settings should be accessbile from your Settings menu.<br/><br/>
		Starting with the version 2.0 is possible to access a quick mounting and unmounting dialog from the Notification bar.<br/>
		If this new feature is crashing, please unplug any USB device attached and uncheck the "Enable quick storage access.".<br/><br/>
		<font color=#cc0029>This application will not</font> add to your device host support, read device manual to see if the device support USB-OTG. In some cases the USB-OTG could be enabled by using a custom ROM.<br/><br/>
		<font color=#cc0029>This application will not always</font> mount back an unmounted USB storage device, that\'s because sometime the Android system is not able to process that request. I made the implementation but is not always successfully.<br/><br/>
		Starting with the version 3.0 is possible to select an application, preferable a file manager, to be launched when a storage is mounted.<br/> 
		If you select a file manager to be launched when a storage is mounted is no guarentee to be displayed the mounted folder, that because is not a standard way to \"notice\" the application to show a particular path. I test with <a href="https://play.google.com/store/apps/details?id=com.estrongs.android.pop">ES File Explorer</a>.]]>
</Data></string>

</resources>